<resources>
    <string name="app_name" translatable="false">OTGC</string>
    <string name="eula_title" translatable="false"><b>End User License Agreement</b></string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Sign in</string>
    <string name="devices_menu_item_reset" translatable="false">Reset</string>
    <string name="devices_menu_item_client_mode">Client mode</string>
    <string name="devices_menu_item_obt_mode">OBT mode</string>
    <string name="devices_menu_item_trust_anchor">Certificate Management</string>
    <string name="devices_menu_item_logs">Show log</string>
    <string name="devices_menu_item_settings">Settings</string>
    <string name="devices_menu_item_logout">Sign out</string>
    <string name="access_control_cardview_permission_create" translatable="false">C</string>
    <string name="access_control_cardview_permission_retrieve" translatable="false">R</string>
    <string name="access_control_cardview_permission_update" translatable="false">U</string>
    <string name="access_control_cardview_permission_delete" translatable="false">D</string>
    <string name="access_control_cardview_permission_notify" translatable="false">N</string>
    <string name="access_control_cardview_wc" translatable="false">Wildcard</string>
    <string name="access_control_cardview_wc_all">All resources</string>
    <string name="access_control_cardview_wc_all_secure">All secure resources</string>
    <string name="access_control_cardview_wc_all_public">All public resources</string>
    <string name="access_control_ace_subject_radio_title">Subject type</string>
    <string name="access_control_ace_subject_radio_uuid" translatable="false">UUID</string>
    <string name="access_control_ace_subject_radio_role">Role</string>
    <string name="access_control_ace_subject_radio_conn_type">Connection type</string>
    <string name="access_control_ace_subject_uuid_hint" translatable="false">UUID</string>
    <string name="access_control_ace_subject_role_id_hint">Role ID</string>
    <string name="access_control_ace_subject_role_authority_hint">Role Authority</string>
    <string name="access_control_ace_subject_conn_type_radio_title">Connection type</string>
    <string name="access_control_ace_subject_conn_type_radio_anon">Anonymous</string>
    <string name="access_control_ace_subject_conn_type_radio_auth">Authenticated</string>
    <string name="pref_iotivity_title_discovery_timeout">Discovery timeout (in seconds)</string>
    <string name="pref_iotivity_default_discovery_timeout" translatable="false">5</string>
    <string name="pref_iotivity_title_requests_delay">Requests delay (in seconds)</string>
    <string name="pref_iotivity_default_requests_delay" translatable="false">1</string>
    <string name="pref_iotivity_title_discovery_scope">Multicast IPv6 scope</string>
    <string name="pref_iotivity_default_discovery_scope" translatable="false">Link-Local</string>
    <string name="about_app_name" translatable="false">Onboarding Tool and Generic Client</string>
    <string name="about_app_version">Version %1$s</string>
    <string name="about_copyright" translatable="false">&#169; 2020 Open Connectivity Foundation.</string>
    <string name="about_all_rights_reserved">All rights reserved.</string>
    <string name="about_powered_by">Powered by:</string>
    <string name="about_dekra_tc" translatable="false">DEKRA Testing and Certification, S.A.U.</string>
</resources>