<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  *****************************************************************
  ~
  ~  Copyright 2018 DEKRA Testing and Certification, S.A.U. All Rights Reserved.
  ~
  ~  *****************************************************************
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~           http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  ~  *****************************************************************
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_reset"
        android:title="@string/devices_menu_item_reset" />
    <item
        android:id="@+id/menu_item_obt_mode"
        android:title="@string/devices_menu_item_obt_mode" />
    <item
        android:id="@+id/menu_item_client_mode"
        android:title="@string/devices_menu_item_client_mode" />
    <item
        android:id="@+id/menu_item_trust_anchor"
        android:title="@string/devices_menu_item_trust_anchor" />
    <item
        android:id="@+id/menu_item_log"
        android:title="@string/devices_menu_item_logs" />
    <item
        android:id="@+id/menu_item_settings"
        android:title="@string/devices_menu_item_settings" />
    <item
        android:id="@+id/buttonDeactivate"
        android:visible="false"
        app:showAsAction="never"
        android:title="@string/devices_menu_item_logout" />
</menu>