<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  *****************************************************************
  ~
  ~  Copyright 2018 DEKRA Testing and Certification, S.A.U. All Rights Reserved.
  ~
  ~  *****************************************************************
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~           http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  ~  *****************************************************************
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_iotivity_default_discovery_timeout"
        android:inputType="number"
        android:key="discovery_timeout"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_iotivity_title_discovery_timeout" />
    <EditTextPreference
        android:defaultValue="@string/pref_iotivity_default_requests_delay"
        android:inputType="number"
        android:key="requests_delay"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_iotivity_title_requests_delay" />
    <ListPreference
        android:key="discovery_scope"
        android:title="@string/pref_iotivity_title_discovery_scope"
        android:defaultValue="@string/pref_iotivity_default_discovery_scope"
        android:entries="@array/pref_iotivity_discovery_entries_array"
        android:entryValues="@array/pref_iotivity_discovery_entry_values_array"
        android:summary="Select IPv6 scope" />
</PreferenceScreen>