<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  *****************************************************************
  ~
  ~  Copyright 2018 DEKRA Testing and Certification, S.A.U. All Rights Reserved.
  ~
  ~  *****************************************************************
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~           http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  ~  *****************************************************************
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_app_name"
        android:textAppearance="@style/MyTextAppearance.BoldHeader"
        android:textColor="?attr/colorPrimary" />
    <TextView
        android:id="@+id/text_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_app_version"
        android:textAppearance="@style/MyTextAppearance.Default" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/logo_height"
        android:src="@drawable/ocf_logo_horizontal"
        android:layout_marginTop="@dimen/logo_vertical_margin"
        android:layout_marginBottom="@dimen/logo_vertical_margin" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_copyright"
        android:textAppearance="@style/MyTextAppearance.Default" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_all_rights_reserved"
        android:textAppearance="@style/MyTextAppearance.Default" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_powered_by"
        android:textAppearance="@style/MyTextAppearance.Notes"
        android:layout_marginTop="16dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_dekra_tc"
        android:textAppearance="@style/MyTextAppearance.Notes" />
</LinearLayout>