<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  *****************************************************************
  ~
  ~  Copyright 2018 DEKRA Testing and Certification, S.A.U. All Rights Reserved.
  ~
  ~  *****************************************************************
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~           http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  ~  *****************************************************************
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white1"
    android:keepScreenOn="true">
    <com.google.android.material.appbar.AppBarLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top">
            <include
                layout="@layout/progress_bar" />
            <include
                layout="@layout/toolbar" />
        </FrameLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        android:layout_margin="16dp">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/access_control_ace_subject_radio_title"
                android:textSize="@dimen/font_size_default" />
            <RadioButton
                android:id="@+id/radio_subject_uuid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/access_control_ace_subject_radio_uuid"
                android:checked="true" />
            <RadioButton
                android:id="@+id/radio_subject_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/access_control_ace_subject_radio_role"/>
            <RadioButton
                android:id="@+id/radio_subject_conn_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/access_control_ace_subject_radio_conn_type"/>
        </RadioGroup>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_subject_uuid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_subject_uuid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/access_control_ace_subject_uuid_hint"
                android:imeOptions="actionDone"
                android:backgroundTint="@color/OCF_DARK_GRAY"
                android:inputType="text"
                android:textAppearance="@style/MyTextAppearance.Default" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:id="@+id/layout_subject_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:visibility="gone">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_subject_role_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/access_control_ace_subject_role_id_hint"
                    android:imeOptions="actionNext"
                    android:backgroundTint="@color/OCF_DARK_GRAY"
                    android:inputType="text"
                    android:textAppearance="@style/MyTextAppearance.Default" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_subject_role_authority"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/access_control_ace_subject_role_authority_hint"
                    android:imeOptions="actionDone"
                    android:backgroundTint="@color/OCF_DARK_GRAY"
                    android:inputType="text"
                    android:textAppearance="@style/MyTextAppearance.Default" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <RadioGroup
            android:id="@+id/layout_subject_conn_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/access_control_ace_subject_conn_type_radio_title"
                android:textSize="@dimen/font_size_default" />
            <RadioButton
                android:id="@+id/radio_subject_conn_type_anon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/access_control_ace_subject_conn_type_radio_anon"
                android:checked="true" />
            <RadioButton
                android:id="@+id/radio_subject_conn_type_auth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/access_control_ace_subject_conn_type_radio_auth"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <CheckBox
                android:id="@+id/checkbox_ace_permission_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/access_control_cardview_permission_create"
                android:textSize="@dimen/font_size_notes" />
            <CheckBox
                android:id="@+id/checkbox_ace_permission_retrieve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/access_control_cardview_permission_retrieve"
                android:textSize="@dimen/font_size_notes" />
            <CheckBox
                android:id="@+id/checkbox_ace_permission_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/access_control_cardview_permission_update"
                android:textSize="@dimen/font_size_notes" />
            <CheckBox
                android:id="@+id/checkbox_ace_permission_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/access_control_cardview_permission_delete"
                android:textSize="@dimen/font_size_notes" />
            <CheckBox
                android:id="@+id/checkbox_ace_permission_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/access_control_cardview_permission_notify"
                android:textSize="@dimen/font_size_notes" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <CheckBox
                android:id="@+id/checkbox_ace_wc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/access_control_cardview_wc"
                android:textSize="@dimen/font_size_notes" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear_layout_wc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:visibility="gone">
            <CheckBox
                android:id="@+id/checkbox_ace_wc_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/access_control_cardview_wc_all"
                android:textSize="@dimen/font_size_notes" />
            <CheckBox
                android:id="@+id/checkbox_ace_wc_all_secure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/access_control_cardview_wc_all_secure"
                android:textSize="@dimen/font_size_notes" />
            <CheckBox
                android:id="@+id/checkbox_ace_wc_all_public"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/access_control_cardview_wc_all_public"
                android:textSize="@dimen/font_size_notes" />
        </LinearLayout>
        <!--<CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/access_control_ace_resources_all"
            android:textSize="@dimen/font_size_notes"
            android:checked="true"
            android:enabled="false" />-->
        <ListView
            android:id="@+id/list_resources"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_notes" />
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_button_ace_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_save_white_24dp"
        app:fabSize="normal" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>