<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  *****************************************************************
  ~
  ~  Copyright 2018 DEKRA Testing and Certification, S.A.U. All Rights Reserved.
  ~
  ~  *****************************************************************
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~           http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  ~  *****************************************************************
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:gravity="center_vertical">
    <ImageView
        android:id="@+id/image_ocf_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginBottom="@dimen/login_logo_margin_bottom"
        android:src="@drawable/ocf_logo_horizontal" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username_hint"
            android:imeOptions="actionNext"
            android:backgroundTint="@color/OCF_DARK_GRAY"
            android:inputType="text"
            android:textAppearance="@style/MyTextAppearance.Default" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/OCF_LIGHT_GRAY">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password_hint"
            android:imeOptions="actionDone"
            android:backgroundTint="@color/OCF_DARK_GRAY"
            android:inputType="textPassword"
            android:textAppearance="@style/MyTextAppearance.Default" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MyButton.Colored"
        android:text="@string/login_button_text" />
</LinearLayout>
